# ResolvX

./: .dockerignore  .env.example  .gitignore  AI_FORUM_DEMO_PLAN.md  ARCHITECTURE_CLEANUP.md  ARCHITECTURE_DIAGRAM.md  DEMO_EXECUTION_GUIDE.md  DEMO_QUICK_REFERENCE.md  DEMO_READINESS_CHECK.md  DEMO_SUMMARY.md  Dockerfile  INSTALLATION_GUIDE.md  LANGFUSE_SETUP.md  QUICK_INSTALL.md  README.md  SHAREPOINT_TOOLS_INTEGRATION.md  UNUSED_FILES_ANALYSIS.md  docker-compose.central-gateway.yml  docker-compose.gateways.yml  docker-compose.langfuse.yml  docker-compose.mock.yml  docker-compose.price-gateway.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
agents/: __init__.py
agents/executor/: __init__.py  agent.py
agents/memory/: __init__.py  agent.py
agents/newrelic/: agent.py
agents/poller/: __init__.py  agent.py
agents/splunk/: agent.py
agents/supervisor/: __init__.py  agent.py
agents/triage/: __init__.py  agent.py
config/: agent.yaml  gateway.yaml
config/environments/: local.yaml.example  production.yaml.example
core/: __init__.py  config.py  exceptions.py
core/domain/: __init__.py  knowledge_loader.py
core/evaluation/: __init__.py  guardrails.py  hallucination_checker.py  quality_assessor.py
core/gateway/: __init__.py  circuit_breaker.py  llm_client.py  mcp_client.py  parameter_mapper.py  tool_registry.py
core/graph/: __init__.py  base.py  builder.py  coordinator.py  executor.py  state.py
core/memory/: __init__.py  base.py  factory.py  faiss_memory.py  mock_memory.py  pinecone_memory.py  redis_memory.py
core/mocks/: tools.py
core/observability/: __init__.py  central_forwarder.py  console_tracer.py  factory.py  langfuse_tracer.py  langsmith_tracer.py  logger.py  metrics.py  tracer.py
core/orchestration/: __init__.py  workflow.py
core/prompts/: __init__.py  loader.py  manager.py  template.py
core/rag/: factory.py  faiss_kb.py  global_rag.py  local_kb.py
core/tools/: __init__.py  base.py  central_gateway.py  sharepoint_tool.py  std_tools.py  team_tools.py
data/faiss_index/: index.faiss  metadata.pkl
data/faiss_kb_index/: documents.pkl  faiss.index
data/mock_tickets/: alert_1_basket_segments_file_drop.json  alert_2_competitor_promo_file_drop.json  alert_3_price_move_investigation.json  alert_4_newrelic_memory_high.json  alert_5_price_promotion_query.json
docs/: MEMORY_AGENT_FAISS.md  agents.md  architecture.md  demo_walkthrough.md  evaluation_integration_guide.md  hybrid_rag_guide.md  langfuse_evaluation_tracing.md  langfuse_trace_structure.md  mock_price_api.md  qna_design.md
examples/: test_zendesk_poller.py
extensions/: __init__.py
extensions/mcp_servers/: __init__.py  base_server.py  zendesk_tools.py
kb/: README.md  basket_segments_runbook.md  performance_issues_runbook.md  price_discrepancy_runbook.md
kb/domain/: README.md  glossary.md  incident_types.md
mock_services/central_gateway/: Dockerfile  app.py  server.py
mock_services/mcp_gateway/: Dockerfile  app.py  requirements.txt
mock_services/price_api/: app.py
mock_services/price_gateway/: Dockerfile  README.md  app.py  docker-entrypoint.sh  server.py  start.sh
mock_services/price_gateway/backend/: Dockerfile  app.py
prompts/executor/: comment_templates.md
prompts/memory/: system_prompt.md
prompts/newrelic/: system_prompt.md
prompts/poller/: system_prompt.md
prompts/splunk/: system_prompt.md
prompts/supervisor/: system_prompt.md
prompts/triage/: incident_analysis.md  routing_decision.md  step1_entity_extraction.md  step2_create_plan.md  step3_synthesize_results.md  system_prompt.md
resources/triage/: glossary.yaml  incident_types.yaml
scripts/: demo_end_to_end.py  index_kb.py  smoke_test.py  start_agents.py  test_evaluation_integration.py  test_faiss_persistence.py  test_full_workflow.py  test_langfuse_connection.py  test_memory_duplicate.py
